fix: improve navbar contrast and Job Groups visibility in dark mode
- Remove deprecated .navbar-light from navbar template to allow BS5
  color modes.
- Define explicit navbar CSS variables for dark mode in overall.scss.
- Ensure nav-links stay bright and visible when selected or hovered in
  dark mode.
- Improve general link and primary color contrast for dark mode.

--- a/assets/stylesheets/navigation.scss
+++ b/assets/stylesheets/navigation.scss
@@ -24,6 +24,25 @@
 
 [data-bs-theme='dark'] .navbar {
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.5);
+
+  .nav-link {
+    color: var(--bs-navbar-color);
+    &:hover,
+    &:focus,
+    &.show,
+    &.active {
+      color: var(--bs-navbar-active-color) !important;
+    }
+  }
+
+  .navbar-nav {
+    @include media-breakpoint-up(lg) {
+      .nav-link:hover,
+      .nav-link:focus {
+        background-color: var(--bs-tertiary-bg);
+      }
+    }
+  }
 }
 
 .navbar-nav {
@@ -47,15 +66,6 @@
     .nav-link {
       padding-top: 22px;
       padding-bottom: 23px;
-    }
-  }
-}
-
-[data-bs-theme='dark'] .navbar-light .navbar-nav {
-  @include media-breakpoint-up(lg) {
-    a.nav-link:hover,
-    .nav-link:focus {
-      background-color: lighten($default-bg-color-dark, 25%);
     }
   }
 }
